* 1.4       Aug 2009
    - add touchiness: block repeated abusers for longer
    - add blacklisting: store frequent abusers for permanent blocking
    - sshguard ignores interrupted fgets() and reloads more seldom (thanks Keven Tipping)
    - support non-POSIX libCs that require getopt.h (thanks Nobuhiro Iwamatsu)
    - import newer SimCList containing a number of fixes and improvements
    - firewall backends now block all traffic from attackers by default, not per-service
    - netfilter/iptables backend now verifies credentials at initialization
    - parser accepts "-" and "_" chars in process names
    - fix detection of some ProFTPd and pure-ftp messages
    - support log formats of new versions of ProFTPd
    - fix one dovecot pattern
    - correctly handle abuse threshold = 1 (thanks K. Tipping)
    - fix handling of IPv6 with IPFW under Mac OS X Leopard (thanks David Horn)
    - fix cmdline argument BoF exploitable by local users when sshguard is setuid
    - support blocking IPv6 addrs in backed "hosts.allow"
    - extend hosts.allow backend to support all service types
    - localhost addresses are now whitelisted a priori
    - extend IPv6 pattern for matching special addresses (eg, IPv4 embedded)
    - fix grammar to be insensitive to a log injection in sshd (thanks J. Oosterveen)

* 1.3       Oct 2008
    - fix autoconf problem
    - automatically detect when ipfw supports IPv6 (thanks David Horn)
    - be sensitive to proftpd messages to auth facility, not daemon (thanks Andy Berkvam)
    - add sshd pattern for "Bad protocol" and "Did not receive identif string"

* 1.2       Sep 2008
    - support for Cyrus IMAP
    - support for SSH "possible break-in attempt" messages
    - updated support for dovecot to include logging format of new versions
    - (thanks Michael Maynard) fix of IPF backend causing sshguard not to
          update /etc/ipf.rules (disallow IPv6)
    - fix detection of password when sshd doesn't log anything more than PAM
